# me495_urdf

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
config/: view_robot.rviz
launch/: see_robot.launch  see_robot.launch.py  see_robot.launch.xml
rviz/: view_robot.rviz
urdf/: chain_link.urdf.xacro  chained.urdf.xacro  slidebot.gazebo.xacro  slidebot.urdf  slidebot.urdf.xacro
